[tool.poetry]
name = "trasncriptor"
version = "0.1.0"
description = ""
authors = ["Melodia25 <44391948+Melodia25@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
supabase = "^2.1.0"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.6"
openai = "^1.3.5"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

